Changed to 'just some of my favorites' in second section

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <main>
         <section id="resources">
             <div class="full-width">
-                <h2>Some of my favorites</h2>
+                <h2>Just some of my favorites</h2>
 
                 <div class="resource">
                     <h3>HTML</h3>
